--- a/aluramidi-curso-aula1/index.html
+++ b/aluramidi-curso-aula1/index.html
@@ -23,7 +23,7 @@
     <h1>Alura Midi</h1>
 
     <section class="teclado">
-        <button class="tecla tecla_pom">Pom</button>
+        <button class="tecla tecla_pom">palmeiras</button>
         <button class="tecla tecla_clap">Clap</button>
         <button class="tecla tecla_tim">Tim</button>
 
@@ -36,7 +36,7 @@
         <button class="tecla tecla_tom">Tom</button>
     </section>
 
-    <audio src="sounds/keyq.wav" id="som_tecla_pom"></audio>
+    <audio src="sounds/SnapInsta.io-Aquele-Palmeira-bem-gritado-_Shorts-_128-kbps_ (2).wav" id="som_tecla_palmeiras"></audio>
     <audio src="sounds/keyw.wav" id="som_tecla_clap"></audio>
     <audio src="sounds/keye.wav" id="som_tecla_tim"></audio>
     <audio src="sounds/keya.wav" id="som_tecla_puff"></audio>
